loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: not found: value isnotFacingWall
while (isnotFacingWall) {
       ^LoopWhile:2: error: not found: value foward
  foward();
  ^